# CPP4_3DViewer_v2.0

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  main.cpp
src/back/: s21_controller.cpp  s21_controller.h  s21_model.h
src/back/test/: check.cpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qglbegin.cpp  qglbegin.h  ui_mainwindow.h
